compiler/testData/diagnostics/tests/PackageInExpressionPosition.kt
package foo

class X {}

val s = <!EXPRESSION_EXPECTED_PACKAGE_FOUND!>java<!>
val ss = <!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>System<!>
val sss = <!FUNCTION_CALL_EXPECTED!>X<!>
val x = "${<!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>System<!>}"
val xs = java.<!EXPRESSION_EXPECTED_PACKAGE_FOUND!>lang<!>
val xss = java.lang.<!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>System<!>
val xsss = foo.<!FUNCTION_CALL_EXPECTED!>X<!>
val xssss = <!EXPRESSION_EXPECTED_PACKAGE_FOUND!>foo<!>
val f = { <!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>System<!> }

fun main(args : Array<String>) {
    <!EXPRESSION_EXPECTED_PACKAGE_FOUND!>java<!> = null
    <!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED, VARIABLE_EXPECTED!>System<!> = <!NULL_FOR_NONNULL_TYPE!>null<!>
    <!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>System<!><!UNNECESSARY_NOT_NULL_ASSERTION!>!!<!>
    java.lang.<!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED, VARIABLE_EXPECTED!>System<!> = <!NULL_FOR_NONNULL_TYPE!>null<!>
    java.lang.<!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>System<!><!UNNECESSARY_NOT_NULL_ASSERTION!>!!<!>
    <!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>System<!> is <!INCOMPATIBLE_TYPES!>Int<!>
    <!INVISIBLE_MEMBER!>System<!>()
    (<!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>System<!>)
    foo@ <!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>System<!>
    null <!UNRESOLVED_REFERENCE!>in<!> <!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>System<!>
}